--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <!-- Logo that links to homepage -->
             <div class=mainLogo>
                 <a href=index.html>
-                    <img src="images/KVH_logo.png" alt="KVH" id="logo_initial">
+                    <img src="images/kvh_logo.png" alt="KVH" id="logo_initial">
                 </a>
                 <!-- text -->
                 <p>Portfolio by Kimberly Van Houten </p>
