--- a/portfolio.html
+++ b/portfolio.html
@@ -75,7 +75,7 @@
     <main>
     <p>
 
-        <embed id="portfoliopdf" src="files/21.10.29 PROGRESS PORTFOLIO.pdf" alt="portfolio" />
+        <embed id="portfoliopdf" src="files/221114 v2 Portfolio Draft - fall 2022.pdf" alt="portfolio" />
     </p>
 
     </main>
