--- a/portfolio.html
+++ b/portfolio.html
@@ -69,10 +69,11 @@
                 </ul>
             </div>
         </nav>
+        <h1></h1>
     </header>
 
 
-    <main>
+    <main id="main">
         <div class=portfolio_container>
 
     <!--Pdf format works poorly on mobile view-->
