--- a/about.html
+++ b/about.html
@@ -84,12 +84,12 @@
                 </p>
 
                 <p class="body_text about_text">
-                    Through my academics I have gone beyond architecture design to learn about sustainability.
+                    Learning about sustainability in relation to architecture has been an important part of my education.
                     My favorite classes have been those that have explored the ways that architecture and
                     our urban environments can best respond to the future of our planet.
-                    Another academic interest of mine is computer programming and technology as it relates to design.
+                    I have also been interested in computer programming and technology as it relates to design.
                     It has been fun to learn the basics of programming through a series of introductory classes.  My next steps
-                    are incorporating what I have learned in these classes with my architecture work.  In my community, I am
+                    are incorporating what I have learned in these classes with my architecture exploration. In my community, I am
                     committed to building an inclusive, equitable and diverse space.
                     I have had the opportunity to serve in various roles including
                     Elected Student Council Representative, Diversity Peer Educator and Jones Russell Ambassador where I have
