--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
                         <a class="nav-link active" href="about.html"> About </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="portfolio.html"> Porfolio </a>
+                        <a class="nav-link" href="portfolio.html"> Portfolio </a>
                     </li>
                     <!--
     <li class="nav-item dropdown">
