--- a/portfolio.html
+++ b/portfolio.html
@@ -46,7 +46,7 @@
                         <a class="nav-link" href="about.html"> About </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="portfolio.html"> Porfolio </a>
+                        <a class="nav-link active" href="portfolio.html"> Portfolio </a>
                     </li>
                     <!--
                     <li class="nav-item dropdown">
