--- a/about.html
+++ b/about.html
@@ -107,7 +107,8 @@
 
             <p>
 
-                <embed id="resumepdf" src="files/11.7.2022 Resume draft.pdf" alt="resume" />
+               <!--<embed id="resumepdf" src="files/11.7.2022 Resume draft.pdf" alt="resume" />-->
+                <img src="files/Kimberly Van Houten - Resume - Fall 2022.png" alt="resume">
             </p>
        
     </main>
