--- a/about.html
+++ b/about.html
@@ -108,7 +108,7 @@
             <p>
 
                <!--<embed id="resumepdf" src="files/11.7.2022 Resume draft.pdf" alt="resume" />-->
-                <img src="files/Kimberly Van Houten - Resume - Fall 2022.png" alt="resume">
+                <img id="resumeimg" src="files/Kimberly Van Houten - Resume - Fall 2022.png" alt="resume">
             </p>
        
     </main>
