--- a/portfolio.html
+++ b/portfolio.html
@@ -78,9 +78,10 @@
 
     <!--Pdf format works poorly on mobile view-->
     <!--  <embed id="portfoliopdf" src="files/221114 v2 Portfolio Draft - fall 2022.pdf" alt="portfolio" /> -->
+            <embed id="portfoliopdf" src="files/221114 v2 Portfolio Draft - fall 2022.pdf" alt="portfolio" />
 
 
-            <img src="images_work/221114 v2 Portfolio Draft - fall 20222.png" alt="portfolio page 1">
+       <!--     <img src="images_work/221114 v2 Portfolio Draft - fall 20222.png" alt="portfolio page 1">
             <img src="images_work/221114 v2 Portfolio Draft - fall 20223.png" alt="portfolio page 2">
             <img src="images_work/221114 v2 Portfolio Draft - fall 20224.png" alt="portfolio page 3">
             <img src="images_work/221114 v2 Portfolio Draft - fall 20225.png" alt="portfolio page 4">
@@ -91,7 +92,7 @@
             <img src="images_work/221114 v2 Portfolio Draft - fall 202210.png" alt="portfolio page 9">
             <img src="images_work/221114 v2 Portfolio Draft - fall 202211.png" alt="portfolio page 10">
             <img src="images_work/221114 v2 Portfolio Draft - fall 202212.png" alt="portfolio page 11">
-            <img src="images_work/221114 v2 Portfolio Draft - fall 202213.png" alt="portfolio page 12">
+            <img src="images_work/221114 v2 Portfolio Draft - fall 202213.png" alt="portfolio page 12"> --!>
 
         </div>
 
