--- a/portfolio.html
+++ b/portfolio.html
@@ -76,8 +76,8 @@
         <div class=portfolio_container>
 
     <!--Pdf format works poorly on mobile view-->
-    <!--  <embed id="portfoliopdf" src="files/221114 v2 Portfolio Draft - fall 2022.pdf" alt="portfolio" /> 
-          <embed id="portfoliopdf" src="23 0207 Portfolio - Kimberly Van Houten - Winter 2023 - spreads - reduced.pdf" alt="portfolio"/> -->
+    <!--  <embed id="portfoliopdf" src="files/221114 v2 Portfolio Draft - fall 2022.pdf" alt="portfolio" /> -->
+          <embed id="portfoliopdf" src="files/23 0207 Portfolio - Kimberly Van Houten - Winter 2023 - spreads - reduced.pdf" alt="portfolio"/> 
      
        <!--     <img src="images_work/221114 v2 Portfolio Draft - fall 20222.png" alt="portfolio page 1">
             <img src="images_work/221114 v2 Portfolio Draft - fall 20223.png" alt="portfolio page 2">
