--- a/portfolio.html
+++ b/portfolio.html
@@ -76,7 +76,7 @@
                
         <div class=portfolio_container>
            <p class="body_text">
-                <a target="blank" href="https://issuu.com/kimberly.vanhouten">Issuu Portfolio Link</a>
+              My portfolio can be viewed through the <a target="blank" href="https://issuu.com/kimberly.vanhouten">Issuu Portfolio Link</a> or below.
            </p>
     <!--Pdf format works poorly on mobile view-->
     <!--  <embed id="portfoliopdf" src="files/221114 v2 Portfolio Draft - fall 2022.pdf" alt="portfolio" /> -->
