--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
                         <a class="nav-link" href="about.html"> About </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="portfolio.html"> Portfolio </a>
+                       <a class="nav-link" href="https://issuu.com/kimberly.vanhouten"> Portfolio </a>
+                       <!-- <a class="nav-link" href="portfolio.html"> Portfolio </a> -->
                     </li>
                     <!--
     <li class="nav-item dropdown">
