--- a/about.html
+++ b/about.html
@@ -45,7 +45,8 @@
                         <a class="nav-link active" href="about.html"> About </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="portfolio.html"> Portfolio </a>
+                         <a class="nav-link" href="https://issuu.com/kimberly.vanhouten"> Portfolio </a>
+                       <!-- <a class="nav-link" href="portfolio.html"> Portfolio </a> -->
                     </li>
                     <!--
     <li class="nav-item dropdown">
